hw2/y.output
State 17 conflicts: 8 shift/reduce
State 23 conflicts: 8 shift/reduce
State 25 conflicts: 8 shift/reduce
State 26 conflicts: 8 reduce/reduce
State 27 conflicts: 8 reduce/reduce
State 28 conflicts: 8 reduce/reduce
State 29 conflicts: 8 reduce/reduce
State 34 conflicts: 8 shift/reduce
State 93 conflicts: 13 shift/reduce
State 177 conflicts: 1 shift/reduce
State 235 conflicts: 1 shift/reduce
State 238 conflicts: 3 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: decl_and_def_list

    2 decl_and_def_list: decl_and_def_list declaration_list
    3                  | declaration_list decl_and_def_list
    4                  | definition_list
    5                  | definition_list decl_and_def_list

    6 declaration_list: declaration_list const_decl
    7                 | declaration_list var_decl
    8                 | declaration_list funct_decl
    9                 | declaration_list proc_decl
   10                 | const_decl
   11                 | var_decl
   12                 | funct_decl
   13                 | proc_decl

   14 var_decl: type var_list SEMICOLON

   15 type: INT
   16     | DOUBLE
   17     | FLOAT
   18     | STRING
   19     | BOOL
   20     | BOOLEAN

   21 identifier: symbol_id
   22           | symbol_id array_indice

   23 symbol_id: ID

   24 array_indice: array_indice L_BRACKET CONS_INTEGER R_BRACKET
   25             | L_BRACKET CONS_INTEGER R_BRACKET

   26 var_list: var_list COMMA var_single
   27         | var_single

   28 var_single: identifier
   29           | symbol_id ASSIGN expr
   30           | symbol_id array_indice ASSIGN init_array

   31 init_array: init_arr_list R_BRACE

   32 init_arr_list: L_BRACE nonEmpty_init_arr_list
   33              | L_BRACE

   34 nonEmpty_init_arr_list: nonEmpty_init_arr_list COMMA expr
   35                       | expr

   36 const_decl: CONST type const_list SEMICOLON

   37 const_list: const_init COMMA const_list
   38           | const_init

   39 const_init: symbol_id ASSIGN literal_constant

   40 literal_constant: CONS_INTEGER
   41                 | CONS_FLOAT
   42                 | CONS_SCIENTIFIC
   43                 | CONS_STRING
   44                 | CONS_BOOL

   45 funct_decl: type symbol_id arg_list R_PAREN SEMICOLON

   46 proc_decl: VOID symbol_id arg_list R_PAREN SEMICOLON

   47 definition_list: type symbol_id arg_list R_PAREN compound_st definition_list
   48                | VOID symbol_id arg_list R_PAREN compound_st definition_list
   49                | type symbol_id arg_list R_PAREN compound_st
   50                | VOID symbol_id arg_list R_PAREN compound_st

   51 arg_list: L_PAREN nonEmpty_arg_list
   52         | L_PAREN

   53 nonEmpty_arg_list: arg COMMA nonEmpty_arg_list
   54                  | arg

   55 arg: type identifier

   56 compound_st: compound_list R_BRACE

   57 compound_list: L_BRACE nonEmpty_compound_list
   58              | L_BRACE

   59 nonEmpty_compound_list: var_decl nonEmpty_compound_list
   60                       | const_decl nonEmpty_compound_list
   61                       | statement nonEmpty_compound_list
   62                       | var_decl
   63                       | const_decl
   64                       | statement

   65 statement: compound_st
   66          | simple_st
   67          | condition_st
   68          | while_st
   69          | for_st
   70          | jump_st
   71          | funct_invoc_st

   72 simple_st: var_ref ASSIGN expr SEMICOLON
   73          | PRINT var_ref SEMICOLON
   74          | PRINT expr SEMICOLON
   75          | READ var_ref SEMICOLON

   76 var_ref: symbol_id
   77        | symbol_id arr_ref_indice

   78 arr_ref_indice: arr_ref_index arr_ref_indice
   79               | arr_ref_index

   80 arr_ref_index: L_BRACKET expr R_BRACKET

   81 condition_st: IF L_PAREN bool_expr R_PAREN compound_st
   82             | IF L_PAREN bool_expr R_PAREN compound_st ELSE compound_st

   83 bool_expr: expr

   84 while_st: WHILE L_PAREN bool_expr R_PAREN compound_st
   85         | DO compound_st WHILE L_PAREN bool_expr R_PAREN SEMICOLON

   86 jump_st: RETURN expr SEMICOLON
   87        | BREAK SEMICOLON
   88        | CONTINUE SEMICOLON

   89 expr: L_PAREN expr R_PAREN
   90     | expr OR expr
   91     | expr AND expr
   92     | NOT expr
   93     | expr LESS expr
   94     | expr LESS_EQ expr
   95     | expr EQUAL expr
   96     | expr GREAT_EQ expr
   97     | expr GREAT expr
   98     | expr NOT_EQ expr
   99     | expr PLUS expr
  100     | expr MINUS expr
  101     | expr MULTIPLY expr
  102     | expr DIVIDE expr
  103     | expr MOD expr
  104     | MINUS expr
  105     | literal_constant
  106     | var_ref
  107     | funct_invoc_ref

  108 for_st: FOR for_init for_control for_incre R_PAREN compound_st

  109 for_init: L_PAREN nonEmpty_for_init
  110         | L_PAREN

  111 nonEmpty_for_init: nonEmpty_for_init COMMA for_single_entry
  112                  | for_single_entry

  113 for_incre: SEMICOLON nonEmpty_for_incre
  114          | SEMICOLON

  115 nonEmpty_for_incre: nonEmpty_for_incre COMMA for_single_entry
  116                   | for_single_entry

  117 for_control: SEMICOLON nonEmpty_for_control
  118            | SEMICOLON

  119 nonEmpty_for_control: nonEmpty_for_control COMMA for_control_entry
  120                     | for_control_entry

  121 for_control_entry: expr
  122                  | symbol_id ASSIGN expr
  123                  | symbol_id array_indice ASSIGN init_array

  124 for_single_entry: symbol_id ASSIGN expr
  125                 | symbol_id array_indice ASSIGN init_array
  126                 | expr
  127                 | symbol_id funct_invoc_list R_PAREN

  128 funct_invoc_ref: symbol_id funct_invoc_list R_PAREN

  129 funct_invoc_st: symbol_id funct_invoc_list R_PAREN SEMICOLON

  130 funct_invoc_list: L_PAREN
  131                 | L_PAREN nonEmpty_funct_invoc_list

  132 nonEmpty_funct_invoc_list: nonEmpty_funct_invoc_list COMMA expr
  133                          | expr


Terminals, with rules where they appear

$end (0) 0
error (256)
VOID (258) 46 48 50
CONST (259) 36
STRING (260) 18
DOUBLE (261) 16
FLOAT (262) 17
BOOL (263) 19
INT (264) 15
BOOLEAN (265) 20
L_PAREN (266) 51 52 81 82 84 85 89 109 110 130 131
R_PAREN (267) 45 46 47 48 49 50 81 82 84 85 89 108 127 128 129
L_BRACKET (268) 24 25 80
R_BRACKET (269) 24 25 80
L_BRACE (270) 32 33 57 58
R_BRACE (271) 31 56
OR (272) 90
AND (273) 91
NOT (274) 92
NOT_EQ (275) 98
GREAT (276) 97
GREAT_EQ (277) 96
EQUAL (278) 95
LESS_EQ (279) 94
LESS (280) 93
MINUS (281) 100 104
PLUS (282) 99
MOD (283) 103
DIVIDE (284) 102
MULTIPLY (285) 101
ASSIGN (286) 29 30 39 72 122 123 124 125
WHILE (287) 84 85
DO (288) 85
IF (289) 81 82
ELSE (290) 82
FOR (291) 108
PRINT (292) 73 74
READ (293) 75
CONTINUE (294) 88
BREAK (295) 87
RETURN (296) 86
ID (297) 23
SEMICOLON (298) 14 36 45 46 72 73 74 75 85 86 87 88 113 114 117 118
    129
COMMA (299) 26 34 37 53 111 115 119 132
CONS_INTEGER (300) 24 25 40
CONS_FLOAT (301) 41
CONS_SCIENTIFIC (302) 42
CONS_STRING (303) 43
CONS_BOOL (304) 44


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
decl_and_def_list (52)
    on left: 2 3 4 5, on right: 1 2 3 5
declaration_list (53)
    on left: 6 7 8 9 10 11 12 13, on right: 2 3 6 7 8 9
var_decl (54)
    on left: 14, on right: 7 11 59 62
type (55)
    on left: 15 16 17 18 19 20, on right: 14 36 45 47 49 55
identifier (56)
    on left: 21 22, on right: 28 55
symbol_id (57)
    on left: 23, on right: 21 22 29 30 39 45 46 47 48 49 50 76 77 122
    123 124 125 127 128 129
array_indice (58)
    on left: 24 25, on right: 22 24 30 123 125
var_list (59)
    on left: 26 27, on right: 14 26
var_single (60)
    on left: 28 29 30, on right: 26 27
init_array (61)
    on left: 31, on right: 30 123 125
init_arr_list (62)
    on left: 32 33, on right: 31
nonEmpty_init_arr_list (63)
    on left: 34 35, on right: 32 34
const_decl (64)
    on left: 36, on right: 6 10 60 63
const_list (65)
    on left: 37 38, on right: 36 37
const_init (66)
    on left: 39, on right: 37 38
literal_constant (67)
    on left: 40 41 42 43 44, on right: 39 105
funct_decl (68)
    on left: 45, on right: 8 12
proc_decl (69)
    on left: 46, on right: 9 13
definition_list (70)
    on left: 47 48 49 50, on right: 4 5 47 48
arg_list (71)
    on left: 51 52, on right: 45 46 47 48 49 50
nonEmpty_arg_list (72)
    on left: 53 54, on right: 51 53
arg (73)
    on left: 55, on right: 53 54
compound_st (74)
    on left: 56, on right: 47 48 49 50 65 81 82 84 85 108
compound_list (75)
    on left: 57 58, on right: 56
nonEmpty_compound_list (76)
    on left: 59 60 61 62 63 64, on right: 57 59 60 61
statement (77)
    on left: 65 66 67 68 69 70 71, on right: 61 64
simple_st (78)
    on left: 72 73 74 75, on right: 66
var_ref (79)
    on left: 76 77, on right: 72 73 75 106
arr_ref_indice (80)
    on left: 78 79, on right: 77 78
arr_ref_index (81)
    on left: 80, on right: 78 79
condition_st (82)
    on left: 81 82, on right: 67
bool_expr (83)
    on left: 83, on right: 81 82 84 85
while_st (84)
    on left: 84 85, on right: 68
jump_st (85)
    on left: 86 87 88, on right: 70
expr (86)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    106 107, on right: 29 34 35 72 74 80 83 86 89 90 91 92 93 94 95
    96 97 98 99 100 101 102 103 104 121 122 124 126 132 133
for_st (87)
    on left: 108, on right: 69
for_init (88)
    on left: 109 110, on right: 108
nonEmpty_for_init (89)
    on left: 111 112, on right: 109 111
for_incre (90)
    on left: 113 114, on right: 108
nonEmpty_for_incre (91)
    on left: 115 116, on right: 113 115
for_control (92)
    on left: 117 118, on right: 108
nonEmpty_for_control (93)
    on left: 119 120, on right: 117 119
for_control_entry (94)
    on left: 121 122 123, on right: 119 120
for_single_entry (95)
    on left: 124 125 126 127, on right: 111 112 115 116
funct_invoc_ref (96)
    on left: 128, on right: 107
funct_invoc_st (97)
    on left: 129, on right: 71
funct_invoc_list (98)
    on left: 130 131, on right: 127 128 129
nonEmpty_funct_invoc_list (99)
    on left: 132 133, on right: 131 132


state 0

    0 $accept: . program $end

    VOID     shift, and go to state 1
    CONST    shift, and go to state 2
    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    program            go to state 9
    decl_and_def_list  go to state 10
    declaration_list   go to state 11
    var_decl           go to state 12
    type               go to state 13
    const_decl         go to state 14
    funct_decl         go to state 15
    proc_decl          go to state 16
    definition_list    go to state 17


state 1

   46 proc_decl: VOID . symbol_id arg_list R_PAREN SEMICOLON
   48 definition_list: VOID . symbol_id arg_list R_PAREN compound_st definition_list
   50                | VOID . symbol_id arg_list R_PAREN compound_st

    ID  shift, and go to state 18

    symbol_id  go to state 19


state 2

   36 const_decl: CONST . type const_list SEMICOLON

    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    type  go to state 20


state 3

   18 type: STRING .

    $default  reduce using rule 18 (type)


state 4

   16 type: DOUBLE .

    $default  reduce using rule 16 (type)


state 5

   17 type: FLOAT .

    $default  reduce using rule 17 (type)


state 6

   19 type: BOOL .

    $default  reduce using rule 19 (type)


state 7

   15 type: INT .

    $default  reduce using rule 15 (type)


state 8

   20 type: BOOLEAN .

    $default  reduce using rule 20 (type)


state 9

    0 $accept: program . $end

    $end  shift, and go to state 21


state 10

    1 program: decl_and_def_list .
    2 decl_and_def_list: decl_and_def_list . declaration_list

    VOID     shift, and go to state 22
    CONST    shift, and go to state 2
    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    $default  reduce using rule 1 (program)

    declaration_list  go to state 23
    var_decl          go to state 12
    type              go to state 24
    const_decl        go to state 14
    funct_decl        go to state 15
    proc_decl         go to state 16


state 11

    3 decl_and_def_list: declaration_list . decl_and_def_list
    6 declaration_list: declaration_list . const_decl
    7                 | declaration_list . var_decl
    8                 | declaration_list . funct_decl
    9                 | declaration_list . proc_decl

    VOID     shift, and go to state 1
    CONST    shift, and go to state 2
    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    decl_and_def_list  go to state 25
    declaration_list   go to state 11
    var_decl           go to state 26
    type               go to state 13
    const_decl         go to state 27
    funct_decl         go to state 28
    proc_decl          go to state 29
    definition_list    go to state 17


state 12

   11 declaration_list: var_decl .

    $default  reduce using rule 11 (declaration_list)


state 13

   14 var_decl: type . var_list SEMICOLON
   45 funct_decl: type . symbol_id arg_list R_PAREN SEMICOLON
   47 definition_list: type . symbol_id arg_list R_PAREN compound_st definition_list
   49                | type . symbol_id arg_list R_PAREN compound_st

    ID  shift, and go to state 18

    identifier  go to state 30
    symbol_id   go to state 31
    var_list    go to state 32
    var_single  go to state 33


state 14

   10 declaration_list: const_decl .

    $default  reduce using rule 10 (declaration_list)


state 15

   12 declaration_list: funct_decl .

    $default  reduce using rule 12 (declaration_list)


state 16

   13 declaration_list: proc_decl .

    $default  reduce using rule 13 (declaration_list)


state 17

    4 decl_and_def_list: definition_list .
    5                  | definition_list . decl_and_def_list

    VOID     shift, and go to state 1
    CONST    shift, and go to state 2
    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    VOID      [reduce using rule 4 (decl_and_def_list)]
    CONST     [reduce using rule 4 (decl_and_def_list)]
    STRING    [reduce using rule 4 (decl_and_def_list)]
    DOUBLE    [reduce using rule 4 (decl_and_def_list)]
    FLOAT     [reduce using rule 4 (decl_and_def_list)]
    BOOL      [reduce using rule 4 (decl_and_def_list)]
    INT       [reduce using rule 4 (decl_and_def_list)]
    BOOLEAN   [reduce using rule 4 (decl_and_def_list)]
    $default  reduce using rule 4 (decl_and_def_list)

    decl_and_def_list  go to state 34
    declaration_list   go to state 11
    var_decl           go to state 12
    type               go to state 13
    const_decl         go to state 14
    funct_decl         go to state 15
    proc_decl          go to state 16
    definition_list    go to state 17


state 18

   23 symbol_id: ID .

    $default  reduce using rule 23 (symbol_id)


state 19

   46 proc_decl: VOID symbol_id . arg_list R_PAREN SEMICOLON
   48 definition_list: VOID symbol_id . arg_list R_PAREN compound_st definition_list
   50                | VOID symbol_id . arg_list R_PAREN compound_st

    L_PAREN  shift, and go to state 35

    arg_list  go to state 36


state 20

   36 const_decl: CONST type . const_list SEMICOLON

    ID  shift, and go to state 18

    symbol_id   go to state 37
    const_list  go to state 38
    const_init  go to state 39


state 21

    0 $accept: program $end .

    $default  accept


state 22

   46 proc_decl: VOID . symbol_id arg_list R_PAREN SEMICOLON

    ID  shift, and go to state 18

    symbol_id  go to state 40


state 23

    2 decl_and_def_list: decl_and_def_list declaration_list .
    6 declaration_list: declaration_list . const_decl
    7                 | declaration_list . var_decl
    8                 | declaration_list . funct_decl
    9                 | declaration_list . proc_decl

    VOID     shift, and go to state 22
    CONST    shift, and go to state 2
    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    VOID      [reduce using rule 2 (decl_and_def_list)]
    CONST     [reduce using rule 2 (decl_and_def_list)]
    STRING    [reduce using rule 2 (decl_and_def_list)]
    DOUBLE    [reduce using rule 2 (decl_and_def_list)]
    FLOAT     [reduce using rule 2 (decl_and_def_list)]
    BOOL      [reduce using rule 2 (decl_and_def_list)]
    INT       [reduce using rule 2 (decl_and_def_list)]
    BOOLEAN   [reduce using rule 2 (decl_and_def_list)]
    $default  reduce using rule 2 (decl_and_def_list)

    var_decl    go to state 41
    type        go to state 24
    const_decl  go to state 42
    funct_decl  go to state 43
    proc_decl   go to state 44


state 24

   14 var_decl: type . var_list SEMICOLON
   45 funct_decl: type . symbol_id arg_list R_PAREN SEMICOLON

    ID  shift, and go to state 18

    identifier  go to state 30
    symbol_id   go to state 45
    var_list    go to state 32
    var_single  go to state 33


state 25

    2 decl_and_def_list: decl_and_def_list . declaration_list
    3                  | declaration_list decl_and_def_list .

    VOID     shift, and go to state 22
    CONST    shift, and go to state 2
    STRING   shift, and go to state 3
    DOUBLE   shift, and go to state 4
    FLOAT    shift, and go to state 5
    BOOL     shift, and go to state 6
    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    VOID      [reduce using rule 3 (decl_and_def_list)]
    CONST     [reduce using rule 3 (decl_and_def_list)]
    STRING    [reduce using rule 3 (decl_and_def_list)]
    DOUBLE    [reduce using rule 3 (decl_and_def_list)]
    FLOAT     [reduce using rule 3 (decl_and_def_list)]
    BOOL      [reduce using rule 3 (decl_and_def_list)]
    INT       [reduce using rule 3 (decl_and_def_list)]
    BOOLEAN   [reduce using rule 3 (decl_and_def_list)]
    $default  reduce using rule 3 (decl_and_def_list)

    declaration_list  go to state 23
    var_decl          go to state 12
    type              go to state 24
    const_decl        go to state 14
    funct_decl        go to state 15
    proc_decl         go to state 16


state 26

    7 declaration_list: declaration_list var_decl .
   11                 | var_decl .

    VOID      reduce using rule 7 (declaration_list)
    VOID      [reduce using rule 11 (declaration_list)]
    CONST     reduce using rule 7 (declaration_list)
    CONST     [reduce using rule 11 (declaration_list)]
    STRING    reduce using rule 7 (declaration_list)
    STRING    [reduce using rule 11 (declaration_list)]
    DOUBLE    reduce using rule 7 (declaration_list)
    DOUBLE    [reduce using rule 11 (declaration_list)]
    FLOAT     reduce using rule 7 (declaration_list)
    FLOAT     [reduce using rule 11 (declaration_list)]
    BOOL      reduce using rule 7 (declaration_list)
    BOOL      [reduce using rule 11 (declaration_list)]
    INT       reduce using rule 7 (declaration_list)
    INT       [reduce using rule 11 (declaration_list)]
    BOOLEAN   reduce using rule 7 (declaration_list)
    BOOLEAN   [reduce using rule 11 (declaration_list)]
    $default  reduce using rule 7 (declaration_list)


state 27

    6 declaration_list: declaration_list const_decl .
   10                 | const_decl .

    VOID      reduce using rule 6 (declaration_list)
    VOID      [reduce using rule 10 (declaration_list)]
    CONST     reduce using rule 6 (declaration_list)
    CONST     [reduce using rule 10 (declaration_list)]
    STRING    reduce using rule 6 (declaration_list)
    STRING    [reduce using rule 10 (declaration_list)]
    DOUBLE    reduce using rule 6 (declaration_list)
    DOUBLE    [reduce using rule 10 (declaration_list)]
    FLOAT     reduce using rule 6 (declaration_list)
    FLOAT     [reduce using rule 10 (declaration_list)]
    BOOL      reduce using rule 6 (declaration_list)
    BOOL      [reduce using rule 10 (declaration_list)]
    INT       reduce using rule 6 (declaration_list)
    INT       [reduce using rule 10 (declaration_list)]
    BOOLEAN   reduce using rule 6 (declaration_list)
    BOOLEAN   [reduce using rule 10 (declaration_list)]
    $default  reduce using rule 6 (declaration_list)


state 28

    8 declaration_list: declaration_list funct_decl .
   12                 | funct_decl .

    VOID      reduce using rule 8 (declaration_list)
    VOID      [reduce using rule 12 (declaration_list)]
    CONST     reduce using rule 8 (declaration_list)
    CONST     [reduce using rule 12 (declaration_list)]
    STRING    reduce using rule 8 (declaration_list)
    STRING    [reduce using rule 12 (declaration_list)]
    DOUBLE    reduce using rule 8 (declaration_list)
    DOUBLE    [reduce using rule 12 (declaration_list)]
    FLOAT     reduce using rule 8 (declaration_list)
    FLOAT     [reduce using rule 12 (declaration_list)]
    BOOL      reduce using rule 8 (declaration_list)
    BOOL      [reduce using rule 12 (declaration_list)]
    INT       reduce using rule 8 (declaration_list)
    INT       [reduce using rule 12 (declaration_list)]
    BOOLEAN   reduce using rule 8 (declaration_list)
    BOOLEAN   [reduce using rule 12 (declaration_list)]
    $default  reduce using rule 8 (declaration_list)


state 29

    9 declaration_list: declaration_list proc_decl .
   13                 | proc_decl .

    VOID      reduce using rule 9 (declaration_list)
    VOID      [reduce using rule 13 (declaration_list)]
    CONST     reduce using rule 9 (declaration_list)
    CONST     [reduce using rule 13 (declaration_list)]
    STRING    reduce using rule 9 (declaration_list)
    STRING    [reduce using rule 13 (declaration_list)]
    DOUBLE    reduce using rule 9 (declaration_list)
    DOUBLE    [reduce using rule 13 (declaration_list)]
    FLOAT     reduce using rule 9 (declaration_list)
    FLOAT     [reduce using rule 13 (declaration_list)]
    BOOL      reduce using rule 9 (declaration_list)
    BOOL      [reduce using rule 13 (declaration_list)]
    INT       reduce using rule 9 (declaration_list)
    INT       [reduce using rule 13 (declaration_list)]
    BOOLEAN   reduce using rule 9 (declaration_list)
    BOOLEAN   [reduce using rule 13 (declaration_list)]
    $default  reduce using rule 9 (declaration_list)


state 30

   28 var_single: identifier .

    $default  reduce using rule 28 (var_single)


state 31
